<resources>
    <string name="app_name">Administrador de Aplicaciones</string>
    <string name="mensaje_vacio">No hay App instaladas</string>
    <string name="titulo_lista">Aplicaciones Instaladas</string>
    <string name="hint_nombre_aplicacion">Nombre de la Aplicación</string>
    <string name="hint_nombre_desarrollador">Nombre del Desarrollador</string>
    <string name="hint_descripcion">Descripción de la Aplicación</string>
    <string name="chk_instalacion">Instalada</string>
    <string name="btn_guardar">Guardar</string>
    <string name="tb_titulo_activity_main">Administrador de Aplicaciones</string>
    <string name="tb_subtitulo_activity_main">Aplicaciones Instaladas</string>
    <string name="menu_item_agregar">Agregar App</string>
    <string name="menu_item_editar">Editar App</string>
    <string name="tb_titulo_nuevo_elemento">Agregar Aplicación</string>
    <string name="btn_desinstalar">Desinstalar</string>
    <string name="btn_abrir">Abrir</string>
    <string name="btn_actualizar">Actualizar</string>
    <string name="desarrollador">Nombre del Desarrollador</string>
    <string name="descripcion">Descripción:</string>
    <string name="actualizar">Actualizar Aplicación</string>
    <string name="actualizada">La Aplicación está Actualizada</string>
    <string name="titulo_borrar_elemento">Eliminar Aplicación</string>
    <string name="mensage_borrar_elemento">¿Desea eliminar la aplicación</string>
    <string name="editar_aplicacion">Editar Aplicación</string>
    <string name="titutlo_notificacion">Desinstalando la Aplicación</string>
    <string name="text_notificacion">Se esta desinstlando la aplicación</string>
    <string name="titulo_notificacion_post">Desinstalación Completa</string>
    <string name="text_notificacion_post">Se ha completado la desisntalación</string>
    <string name="txv_leyenda_desinstalacion">Aplicación Desinstalada</string>
    <string name="bigText_notificacion_post">Se ha completado la desinstalación de la aplicación:</string>

</resources>
